# credit_card_customer_segmentation_package

./: .gitignore  README.md  pyproject.toml
credit_card_segmentation/: __init__.py  cli.py
credit_card_segmentation/src/: clustering.py  feature_engineering.py
credit_card_segmentation/utils/: __init__.py  data_loader.py  plotting.py
examples/: basic_clustering.py
tests/: __init__.py  test_clustering.py  test_data_loader.py  test_feature_engineering.py  test_plotting.py
